--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
-  min-height: 100vh;
+  min-height: 150vh;
+  width: 100%;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -8,115 +9,153 @@
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
+  width: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  align-content: center;
+}
+.main header{
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.modalOpenButton{
+  outline: none;
+  align-self: flex-end;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  filter: brightness(125%);
+  margin: 10px;
+}
+.modalOpenButton:hover img{
+  filter: brightness(150%);
+}
+.modalOpenButton img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.modalCloseButton{
+  outline: none;
+  align-self: flex-end;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+.modalCloseButton:hover img{
+  filter: brightness(150%);
+}
+.modalCloseButton img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.historyContainer{
+
+}
+.historyContainer h1{
+  margin-bottom: 0;
+  color: white;
+}
+.history{
+  margin-top: 0;
+  padding: 0;
+  display: 'flex';
+  flex-direction: 'collumn';
+  color: white;
+  border: rgba(255, 255, 255, 0.07) solid 1px;
+  box-shadow: var(--shadow);
+  border-radius: var(--radius);
+  overflow: hidden;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+.history li{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-left: 10px;
+  transition: background .3s ease-in-out;
 }
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
+.history li h3{
+  width: 100%;
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 }
-
-.logo {
-  height: 1em;
+.history li:nth-of-type(2n+1){
+  background: rgba(0, 0, 0, 0.118);
 }
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.history li:nth-of-type(2n){
+  background: rgba(255, 255, 255, 0.118);
+}
+.history li:nth-of-type(2n+1):hover{
+  background: rgba(255, 255, 255, 0.118);
+}
+.history li:nth-of-type(2n):hover{
+  background: rgba(255, 255, 255, 0.218);
+}
+.history button{
+  outline: none;
+  align-self: center;
+  height: 20px;
+  padding: 0;
+  margin: 10px;
+  border: none;
+  background-color: transparent;
+}
+.history button img{
+  height: 20px;
+}
+.history button:hover img{
+  filter: brightness(150%);
+}
+.formAddEntry{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  justify-content: center;
+}
+.formAddEntry input{
+  font-size: 18px;
+  color: rgb(172, 170, 170);
+  height: 50px;
+  outline: none;
+  border: none;
+  border-top: solid rgb(228, 228, 228) 2px;
+  text-indent: 8px;
+}
+.formAddEntry input::placeholder{
+  color: rgb(172, 170, 170);
+}
+.formAddEntry input[type='date']{
+  color: rgb(172, 170, 170);
+  text-indent: 5px;
+}
+.formAddEntry select{
+  outline: none;
+  font-size: 18px;
+  color: white;
+  background: rgb(240, 67, 67);
+  height: 50px;
+  text-indent: 8px;
+  border: none;
+}
+.formAddEntry button{
+  border: rgba(255, 255, 255, 0.248) solid 1px;
+  color: white;
+  font-weight: bold;
+  background: var(--green);
+  margin-top: 30px;
+  height: 50px;
+  transition: all .5s ease-in-out;
+  font-size: 24px;
+}
+.formAddEntry button:hover{
+  background: #49d496;
 }
