--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+:root{
+  --radius: .35rem;
+  --green: #38c183;
+  --red: #e05f5f;
+  --white: #d5d5d527;
+  --text-color-1: white;
+  --text-color-2: black;
+  --shadow: 0px 4px 12px rgba(0, 0, 0, 0.159);
+}
 html,
 body {
+  background: rgb(228,23,206);
+  background: linear-gradient(180deg, rgba(228,23,206,1) 0%, rgba(107,123,232,1) 52%, rgba(5,17,176,1) 100%);
   padding: 0;
   margin: 0;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
