--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,6 @@
 .container {
   min-height: 150vh;
   width: 100%;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,10 +15,11 @@
   align-content: center;
 }
 .main header{
-  width: auto;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .modalOpenButton{
   outline: none;
@@ -31,89 +31,38 @@
   background-color: transparent;
   filter: brightness(125%);
   margin: 10px;
-}
-.modalOpenButton:hover img{
-  filter: brightness(150%);
+  margin-top: 20px;
 }
 .modalOpenButton img{
+  transition: transform .3s ease-in-out;
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+.modalOpenButton:hover img{
+  filter: brightness(150%);
+  transform: scale(1.3);
 }
 .modalCloseButton{
   outline: none;
   align-self: flex-end;
   width: 30px;
   height: 30px;
+  margin: 10px 0;
   padding: 0;
   border: none;
   background-color: transparent;
 }
 .modalCloseButton:hover img{
   filter: brightness(150%);
+  transform: scale(1.2);
 }
 .modalCloseButton img{
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
-.historyContainer{
 
-}
-.historyContainer h1{
-  margin-bottom: 0;
-  color: white;
-}
-.history{
-  margin-top: 0;
-  padding: 0;
-  display: 'flex';
-  flex-direction: 'collumn';
-  color: white;
-  border: rgba(255, 255, 255, 0.07) solid 1px;
-  box-shadow: var(--shadow);
-  border-radius: var(--radius);
-  overflow: hidden;
-}
-
-.history li{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-left: 10px;
-  transition: background .3s ease-in-out;
-}
-.history li h3{
-  width: 100%;
-  margin: 0;
-}
-.history li:nth-of-type(2n+1){
-  background: rgba(0, 0, 0, 0.118);
-}
-.history li:nth-of-type(2n){
-  background: rgba(255, 255, 255, 0.118);
-}
-.history li:nth-of-type(2n+1):hover{
-  background: rgba(255, 255, 255, 0.118);
-}
-.history li:nth-of-type(2n):hover{
-  background: rgba(255, 255, 255, 0.218);
-}
-.history button{
-  outline: none;
-  align-self: center;
-  height: 20px;
-  padding: 0;
-  margin: 10px;
-  border: none;
-  background-color: transparent;
-}
-.history button img{
-  height: 20px;
-}
-.history button:hover img{
-  filter: brightness(150%);
-}
 .formAddEntry{
   position: relative;
   display: flex;
@@ -140,13 +89,22 @@
 .formAddEntry select{
   outline: none;
   font-size: 18px;
-  color: white;
-  background: rgb(240, 67, 67);
+  font-family: 'Arial';
+  color: rgb(172, 170, 170);
   height: 50px;
   text-indent: 8px;
   border: none;
 }
-.formAddEntry button{
+.formAddEntry select option{
+  color: white;
+  font-size: 20px;
+  height: 100%;
+}
+.formAddEntry option img{
+  width: 20px;
+  height: 20px;
+}
+.formAddEntry button[type='submit']{
   border: rgba(255, 255, 255, 0.248) solid 1px;
   color: white;
   font-weight: bold;
@@ -156,6 +114,67 @@
   transition: all .5s ease-in-out;
   font-size: 24px;
 }
-.formAddEntry button:hover{
+.formAddEntry button[type='submit']:hover{
   background: #49d496;
+}
+
+.historyContainer{
+  margin: 0;
+  margin-top: 0;
+}
+.historyContainer h1{
+  margin: 5px 0 5px 20px;
+  color: white;
+}
+.history{
+  margin-top: 0;
+  padding: 0;
+  display: 'flex';
+  flex-direction: 'collumn';
+  color: white;
+  border: rgba(255, 255, 255, 0.07) solid 1px;
+  box-shadow: var(--shadow);
+  border-radius: var(--radius);
+  overflow: hidden;
+}
+
+.history li{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-left: 20px;
+  transition: background .3s ease-in-out;
+}
+.history li h3{
+  width: 100%;
+  margin: 0;
+}
+.history li:nth-of-type(2n+1){
+  background: rgba(0, 0, 0, 0.118);
+}
+.history li:nth-of-type(2n){
+  background: rgba(255, 255, 255, 0.118);
+}
+.history li:nth-of-type(2n):hover{
+  background: rgba(255, 255, 255, 0.318);
+}
+.history li:nth-of-type(2n+1):hover{
+  background: rgba(0, 0, 0, 0.318);
+}
+.history button{
+  outline: none;
+  align-self: center;
+  height: 20px;
+  padding: 0;
+  margin: 10px 20px;
+  border: none;
+  background-color: transparent;
+}
+.history button img{
+  transition: transform .3s ease-in-out;
+  height: 20px;
+}
+.history button:hover img{
+  transform: scale(1.3);
+  filter: brightness(150%) hue-rotate(-25deg);
 }
