--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
   --text-color-1: white;
   --text-color-2: black;
   --shadow: 0px 4px 12px rgba(0, 0, 0, 0.159);
+  --skeumorph-shadow: 4px 4px 8px rgba(0, 0, 0, 0.250), -4px -4px 10px rgba(255, 255, 255, 0.200);
 }
 html,
 body {
@@ -17,13 +18,4 @@ body {
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
