--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -15,6 +15,8 @@
     backdrop-filter: blur(2px);
     border: 1px solid rgba(255, 255, 255, 0.111);
     box-shadow: var(--shadow);
+    border-bottom: 0px;
+  border-right: 0px;
 }
 .container:nth-of-type(2n){
     margin: 0 15px; /*TEMPORARIO*/
