--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -184,7 +184,9 @@
   display: 'flex';
   flex-direction: 'collumn';
   color: white;
-  border: rgba(255, 255, 255, 0.07) solid 1px;
+  border: rgba(255, 255, 255, 0.111) solid 1px;
+  border-bottom: 0px;
+  border-right: 0px;
   box-shadow: var(--shadow);
   border-radius: var(--radius);
   overflow: hidden;
