--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,7 @@
 .container {
-  min-height: 150vh;
-  width: 100%;
+  min-height: 100vh;
+  width: 1080px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,240 +15,5 @@
   flex-wrap: wrap;
   align-content: center;
 }
-.main header{
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.modalOpenButton{
-  outline: none;
-  align-self: flex-end;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  filter: brightness(125%);
-  margin: 10px;
-  margin-top: 20px;
-}
-.modalOpenButton img{
-  transition: transform .3s ease-in-out;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.modalOpenButton:hover img{
-  filter: brightness(150%);
-  transform: scale(1.3);
-}
-.modalCloseButton{
-  outline: none;
-  align-self: flex-end;
-  width: 30px;
-  height: 30px;
-  margin: 10px 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-}
-.modalCloseButton:hover img{
-  filter: brightness(150%);
-  transform: scale(1.2);
-}
-.modalCloseButton img{
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
 
-.formAddEntry{
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  justify-content: center;
-}
-.formAddEntry input{
-  font-size: 18px;
-  color: rgb(172, 170, 170);
-  height: 50px;
-  outline: none;
-  border: none;
-  border-top: solid rgb(228, 228, 228) 2px;
-  text-indent: 8px;
-}
-.formAddEntry input::placeholder{
-  color: rgb(172, 170, 170);
-}
-.formAddEntry input[type='date']{
-  color: rgb(172, 170, 170);
-  text-indent: 5px;
-}
-.formAddEntry select{
-  outline: none;
-  font-size: 18px;
-  font-family: 'Arial';
-  color: rgb(172, 170, 170);
-  height: 50px;
-  text-indent: 8px;
-  border: none;
-}
-.formAddEntry select option{
-  color: white;
-  font-size: 20px;
-  height: 100%;
-}
 
-.formAddEntry button{
-  color: white;
-  font-weight: bold;
-  margin-top: 30px;
-  height: 50px;
-  transition: all .5s ease-in-out;
-  font-size: 24px;
-}
-.formAddEntry .buttons{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-.formAddEntry .buttons button{
-  width: 48%;
-}
-.formAddEntry .add{
-  border: rgba(255, 255, 255, 0.248) solid 1px;
-  background: var(--green);
-}
-.formAddEntry .add:hover{
-  background: #49d496;
-}
-
-.formAddEntry .delete {
-  border: rgba(255, 255, 255, 0.248) solid 1px;
-  background: var(--red);
-}
-
-.historyContainer{
-  margin: 0;
-  margin-top: 0;
-}
-.historyContainer h1{
-  margin: 5px 0 5px 20px;
-  color: white;
-}
-.historyContainerFilter{
-  display: flex;
-  justify-content: space-between;
-}
-.formAddEntry .delete:hover {
-  background: #ec6c6c;
-}
-.historyFilter{
-  display: flex;
-  margin-right: 14px;
-}
-.historyFilter input, .historyFilter select{
-  outline: none;
-  color: white;
-  font-family: 'Inter';
-  font-size: 24px;
-  border: none;
-  background: transparent;
-}
-.historyFilter option{
-  color: black;
-  margin: 0;
-  padding: 0;
-}
-.historyFilter div{
-  width: 2px;
-  height: 15px;
-  transform: translateX(-10px);
-  z-index: 0;
-  align-self: center;
-  background: white;
-}
-.historyFilter input[type=number]{
-  z-index: 1;
-  width: 75px;
-}
-.historyFilter select{
-  transform: translateX(-5px);
-  width: 75px;
-}
-.history{
-  margin-top: 0;
-  padding: 0;
-  display: 'flex';
-  flex-direction: 'collumn';
-  color: white;
-  border: rgba(255, 255, 255, 0.111) solid 1px;
-  border-bottom: 0px;
-  border-right: 0px;
-  box-shadow: var(--shadow);
-  border-radius: var(--radius);
-  overflow: hidden;
-}
-.historyMenu div{
-  width: 100%;
-  margin: 0;
-  font-size: 17px;
-  font-weight: bold;
-}
-.historyMenu div:last-of-type{
-  margin: 10px 20px;
-  width: 0;
-  padding: 0px 10px;
-  height: 20px;
-}
-
-.history li{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-left: 20px;
-  transition: background .3s ease-in-out;
-}
-.history li h3{
-  width: 100%;
-  margin: 0;
-}
-.history li:nth-of-type(2n+1){
-  background: rgba(0, 0, 0, 0.118);
-}
-.history li:nth-of-type(2n){
-  background: rgba(255, 255, 255, 0.118);
-}
-.history li:nth-of-type(2n):hover{
-  background: rgba(255, 255, 255, 0.318);
-}
-.history li:nth-of-type(2n+1):hover{
-  background: rgba(0, 0, 0, 0.318);
-}
-.history li:first-of-type{
-  background: rgba(0, 0, 0, 0.618);
-}
-.history li:first-of-type:hover{
-  background: rgba(0, 0, 0, 0.618);
-}
-.history button{
-  outline: none;
-  align-self: center;
-  height: 20px;
-  width: 20px;
-  padding: 0;
-  margin: 10px 20px;
-  border: none;
-  background-color: transparent;
-}
-.history button img{
-  transition: transform .3s ease-in-out;
-  height: 20px;
-}
-.history button:hover img{
-  transform: scale(1.3);
-  filter: brightness(150%) hue-rotate(-25deg);
-}
