--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,15 +3,16 @@
   --radius: .35rem;
   --green: #38c183;
   --red: #e05f5f;
-  --white: #d5d5d527;
+  --white: #ffffff31;
   --text-color-1: white;
   --text-color-2: black;
-  --shadow: 0px 4px 12px rgba(0, 0, 0, 0.159);
-  --skeumorph-shadow: 4px 4px 8px rgba(0, 0, 0, 0.250), -4px -4px 10px rgba(255, 255, 255, 0.200);
+  --border: 1px solid rgba(255, 255, 255, 0.076);
+  --shadow: 0px 0px 7px rgba(0, 0, 0, 0.239);
+  --skeumorph-shadow: 2px 2px 5px rgba(0, 0, 0, 0.250), -2px -2px 5px rgba(255, 255, 255, 0.200);
 }
 html,
 body {
-  background: rgb(228,23,206);
+  background: rgb(163, 163, 163);
   background: linear-gradient(180deg, rgba(228,23,206,1) 0%, rgba(107,123,232,1) 52%, rgba(5,17,176,1) 100%);
   padding: 0;
   margin: 0;
@@ -19,6 +20,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+/*  background: linear-gradient(180deg, rgba(228,23,206,1) 0%, rgba(107,123,232,1) 52%, rgba(5,17,176,1) 100%);
+*/
 *{
   box-sizing: border-box;
 }
